--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: GrassClient
 description:Download GrassClient
 theme: jekyll-theme-slate
 
-background_image: "https://tu-imagen-de-grass-client.jpg"
+background_image: "https://raw.githubusercontent.com/DanitopYT/GRASSCLIENT/refs/heads/main/Screenshot_20260218-195434.png"
 
 header_background: "rgba(0, 0, 0, 0.4)"
 body_background: "transparent"
